Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9929

Qt Creator doesn't know about some QML Types

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.2.0
    • Qt Creator 2.8.0
    • Quick / QML Support
    • None
    • Qt 5.1.0, Qt Creator 2.8.0, Mac OS X 10.7.5
    • a1e4efe2e3e10946ba250775ca3088d8368fc957

    Description

      Qt Creator doesn't seem to know about a few Qt Quick 2.0 basic types. Using the one of the types vector2d, vector4d, quaternion or matrix4x4 as property type causes it to be marked as error M304. The error also shows up when checks (Tools->QML/JS->Run Checks) are run. The full error text is Invalid property type 'vector2d'. (M304).

      Example:

      import QtQuick 2.0
      
      Item {
      	property vector2d v
      }
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-9929
        # Subject Branch Project Status CR V

        Activity

          People

            fawzi Fawzi Mohamed
            maxlor Benjamin Lutz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes