qmljs: add vector*d, quaternion, and matrix4x4 to code model

Added vector2d vector4d, quaternion and matrix4x4 to basic types
and extended completions related to them in the code model.

Task-number: QTCREATORBUG-9929
Change-Id: Iafdbdf5792f640e8eb29d866a372542ee07159a5
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>